# internalgraph

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
internalgraph/: __init__.py  internalgraph.py
tests/: test_edge.py  test_graph.py  test_node.py
