[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "internalgraph"
version = "1.0.0"
description="Very simple graph storage class with primitive query and serialization"
requires-python = ">=3.7"
dependencies = []
readme = "README.md"
license = {file = "LICENSE"}
classifiers =  [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
authors = [
    {name = "Charlie Todd"}
]

[project.urls]
"Homepage" = "https://github.com/indifferentcats/internalgraph"
"Bug Tracker" = "https://github.com/indifferentcats/internalgraph/issues"
"Repository" = "https://github.com/indifferentcats/internalgraph.git"
